src/test/ui/issue-25793.nll.stderr
error: compilation successful
  --> $DIR/issue-25793.rs:32:1
   |
LL | fn main() { #![rustc_error] } // rust-lang/rust#49855
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

